<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DataControl"
    android:background="@color/backSarah">

    <TextView
        android:id="@+id/dataText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/explanation_anime_test"
        android:textSize="20sp"
        android:textColor="@color/darkViola"
        android:layout_marginTop="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageData"
        android:layout_width="wrap_content"
        android:layout_height="160sp"
        android:src="@drawable/pic_example"
        android:layout_marginTop="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dataText"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="30sp"
        android:layout_marginTop="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageData">

        <EditText
            android:id="@+id/firstAnswer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_answer_example"
            />
        <EditText
            android:id="@+id/secondAnswer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/second_answer_example"
            />
        <EditText
            android:id="@+id/thirdAnswer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/third_answer_example"
            />
        <EditText
            android:id="@+id/fourthAnswer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fourth_answer_example"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_radio_question"
            android:textColor="@color/eyeKiller"
            android:textSize="15sp"
            android:layout_marginTop="15sp"/>

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="1"
                android:checked="true"
                android:buttonTint="@color/darkViola" />
            <RadioButton
                android:id="@+id/radioTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="2"
                android:buttonTint="@color/darkViola" />
            <RadioButton
                android:id="@+id/radioThree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="3"
                android:buttonTint="@color/darkViola" />
            <RadioButton
                android:id="@+id/radioFour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="4"
                android:buttonTint="@color/darkViola" />
        </RadioGroup>
    </LinearLayout>

    <android.widget.Button
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_question_button"
        android:textColor="@color/white"
        android:background="@drawable/button_shadow"
        android:paddingHorizontal="20sp"
        android:layout_margin="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>