<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DataControl"
    android:background="@color/backSarah">

    <TextView
        android:id="@+id/dataText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add new round for Test"
        android:textSize="25sp"
        android:textColor="@color/eyeKiller"
        android:layout_marginTop="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/mainLinear"
        android:layout_width="match_parent"
        android:layout_height="450sp"
        android:orientation="vertical"
        android:paddingHorizontal="30sp"
        android:layout_marginTop="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dataText">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            
            <ImageView
                android:id="@+id/picFirst"
                android:layout_width="100sp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/pic_example_mini"
                android:layout_marginRight="20sp"
                android:layout_marginEnd="20sp"
                android:onClick="choosePicture"/>

            <LinearLayout
                android:layout_width="200sp"
                android:layout_height="100sp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_gravity="center">
                <EditText
                    android:id="@+id/nameFirst"
                    android:layout_width="200sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/character_name_example"
                    android:background="@color/backSarah"
                    android:layout_marginBottom="10sp"/>
                <EditText
                    android:id="@+id/animeFirst"
                    android:layout_width="200sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/anime_title_example"
                    android:background="@color/backSarah"/>

            </LinearLayout>
        </LinearLayout>
            
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/lightViola"
                android:layout_marginVertical="10sp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/picSecond"
                android:layout_width="100sp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/pic_example_mini"
                android:layout_marginRight="20sp"
                android:layout_marginEnd="20sp"
                android:onClick="choosePicture"/>

            <LinearLayout
                android:layout_width="200sp"
                android:layout_height="100sp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_gravity="center">
                <EditText
                    android:id="@+id/nameSecond"
                    android:layout_width="200sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/character_name_example"
                    android:background="@color/backSarah"
                    android:layout_marginBottom="10sp"/>
                <EditText
                    android:id="@+id/animeSecond"
                    android:layout_width="200sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/anime_title_example"
                    android:background="@color/backSarah"/>

            </LinearLayout>
        </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/darkViola"
                android:layout_marginVertical="10sp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/picThird"
                android:layout_width="100sp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/pic_example_mini"
                android:layout_marginRight="20sp"
                android:layout_marginEnd="20sp"
                android:onClick="choosePicture"/>

            <LinearLayout
                android:layout_width="200sp"
                android:layout_height="100sp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_gravity="center">
                <EditText
                    android:id="@+id/nameThird"
                    android:layout_width="200sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/character_name_example"
                    android:background="@color/backSarah"
                    android:layout_marginBottom="10sp"/>
                <EditText
                    android:id="@+id/animeThird"
                    android:layout_width="200sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/anime_title_example"
                    android:background="@color/backSarah"/>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    
    <android.widget.Button
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_question_button"
        android:textColor="@color/white"
        android:background="@drawable/button_shadow"
        android:paddingHorizontal="20sp"
        android:layout_margin="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>